remove white space and single product add to cart style fixed

--- a/wp-content/themes/takeaway/assets/css/style.css
+++ b/wp-content/themes/takeaway/assets/css/style.css
@@ -2565,7 +2565,7 @@ input[type="submit"].btn-block, input[type="reset"].btn-block, input[type="butto
 }
 
 #main-wrapper .mega-call-us .open-now p {
-    font-size: 22px;
+    font-size: 22px;©
 }
 
 /* all menu details */
@@ -3167,7 +3167,9 @@ input[type="submit"].btn-block, input[type="reset"].btn-block, input[type="butto
 #main-wrapper .all-menu-details .single-menu .details h6 {
     padding: 5px 0 10px 0;
     margin: 0;
-    font-size: 20px;
+    font-size: 30px;
+    text-align: left;
+    text-transform: capitalize;
 }
 
 #main-wrapper .all-menu-details .single-menu .details p{ line-height: 20px; }
@@ -5673,7 +5675,9 @@ h5 a:hover { color: #666; }
 }
 
 .woocommerce-page .quantity input.qty {
-    width: 55px !important;
+        width: 70px !important;
+    height: 45px;
+    border: 2px solid rgba(0, 0, 0, 0.15);
 }
 
 .woocommerce * {
